cleaned up code, fixed news articles, authorization and spacing.  Also left comments for validation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,13 @@ body {
     float: left;
 }
 
+.newsArea {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin: auto;
+}
+
 .news-table {
     display: flex;
     flex-flow: column wrap;
@@ -66,5 +73,5 @@ body {
     }
   }
   .btn {
-    width: 80% !important;
+    margin: auto;
   }
